Dot file updates

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -1,9 +1,8 @@
 general {
     colors = true
-    color_bad = "#DC322F"
-    color_degraded = "#b58900"
-    #color_good = "#859900"
-    color_good = "#7b8748"
+    color_bad = "#FF005B"
+    color_degraded = "#FF9F00"
+    color_good = "#CCFF00"
     interval = 2
 }
 
@@ -51,7 +50,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = "  %a %e.%b   %H:%M:%S"
+    format = "  %a%e.%b   %H:%M:%S"
 }
 
 load {
