--- a/config
+++ b/config
@@ -29,9 +29,10 @@ for_window [title="MilkyTracker*"] floating disable
 
 assign [title="VLC*"] 8-FILMTAJM
 for_window [title="VLC*"] focus
+for_window [window_role="bubble"] floating enable
 
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q set Master 5%- unmute
+bindsym XF86AudioRaiseVolume exec setvolume.sh 5%+
+bindsym XF86AudioLowerVolume exec setvolume.sh 5%-
 bindsym XF86AudioMute exec /home/jefvel/scripts/mutetoggle.sh
 
 bindsym Ctrl+Mod1+l exec ~/scripts/lock.sh
@@ -135,7 +136,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -f ProFont -t warning -m 'Exit i3?' -b 'Yep' 'i3-msg exit' 
+bindsym $mod+Shift+e exec "i3-nagbar -f ProFont -t warning -m 'Exit i3?' -b 'Yep' 'i3-msg exit'
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -166,7 +167,7 @@ bindsym $mod+r mode "resize"
 font pango: ProFont 9
 
 # class                 border  backgr. text    indicator
-client.focused          #d64937 #d64937 #dedede #d64937
+client.focused          #3d3d3d #3d3d3d #dedede #2d2d2d
 client.unfocused        #2d2d2d #2d2d2d #888888 #2d2d2d
 client.focused_inactive #2d2d2d #333333 #dedede #2d2d2d
 client.urgent           #383a3b #383a3b #ee0000 #383a3b
